--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,13 +1,8 @@
-footer {
-    height: 60px;
+footer{
     background-color: #00FF00;
-    position: absolute;
+    height: 60px;
     width: 100%;
-    bottom: 0;
-    left: 0;
-}
-
-p {
     text-align: center;
-    padding: 6px;
-}
+    position: fixed;
+    bottom: 0px;
+   }
